Fix chat messages text overflow

--- a/src/main/resources/static/styles/chat.css
+++ b/src/main/resources/static/styles/chat.css
@@ -30,7 +30,7 @@
 }
 
 #middle-row #chat-box .chat-message-box .chat-message {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 #middle-row #chat-box .chat-message-box .chat-message-time {
